<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="weather_fragment_label">Weather Fragment</string>

    <string name="page_title">Weather Report</string>
    <string name="weather_image">Weather report image indicator</string>
    <string name="temp_details">Humidity:%1$s, Pressure: %2$s</string>
    <string name="temperature">Temperature : %1$s°C</string>
    <string name="temp_details_large">%1$s°C</string>
    <string name="humidity">Humidity: %1$s</string>
    <string name="pressure">Pressure :%1$s</string>
    <string name="temperature_min">Temperature Min :%1$s</string>
    <string name="temperature_max">Temperature Max :%1$s</string>
</resources>